# ilmendur

./: .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  README  Rakefile  eu.guelker.ilmendur.yml
cmake/: copy_pofiles.cmake  dependencies.cmake
cmake/modules/: FindPulse.cmake  FindUnwind.cmake  FindWayland.cmake
data/fonts/: 1455_gutenberg_b42.license.txt  LinLibertine_R.fontdef
data/general/: testskybox.material
data/gfx/chars/: spaceship.ini
data/gfx/flags/: mageflag-waving.ini
data/maps/: Oak Fortress.tmx  Test Map 2.tmx
data/meshes/: Cube.mesh  Cube.mesh.xml  Material.material  dummyhull.material  freya.mesh  sign.mesh  signback.material  signfront.material  testarea.material  testarea.mesh  testmesh.mesh
data/scenes/dummy_scene/: testarea.mesh
data/scenes/test_scene/: Bricks.material  Bricks2.material  Cube.001.mesh  Cube.002.mesh  Cube.mesh  Doorframe.material  Grass.material  Material.material  Plane.001.mesh  Plane.mesh  Roof.material  extern.il_obj.material  testscene.scene
data/tilesets/: City Outside.tsx  Forst Town.tsx  Mage City.tsx  Mountains.tsx  Outside 1.tsx  Outside 2.tsx  Outside 3.tsx  Outside 4.tsx  Signposts.tsx  Steampunk Town.tsx
data/translations/: Ilmendur.pot  Makefile  de.po
doc/: active_objects.org  ini.org  models.org  tiled.org  tips.org
doc/concept/: mechanics.org
gfx/flags/: mageflag-waving.ini
src/: actor.cpp  actor.hpp  application.cpp  application.hpp  audio.cpp  audio.hpp  buildconfig.hpp.in  camera.cpp  camera.hpp  collbox.cpp  collbox.hpp  event.hpp  external_strings.cpp  game_state.cpp  gettext.h  globals.hpp  gui.cpp  gui.hpp  i18n.cpp  i18n.hpp  ilmendur.cpp  ilmendur.hpp  ini.c  ini.h  main.cpp  map.cpp  map.hpp  os.cpp  os.hpp  passage.hpp  player.cpp  player.hpp  resolver.cpp  scene.cpp  scene.hpp  texture_pool.cpp  texture_pool.hpp  tileset.cpp  tileset.hpp  timer.cpp  (+7 more)
src/actors/: actor.cpp  actor.hpp  collbox.cpp  collbox.hpp  freya.cpp  freya.hpp  hero.cpp  hero.hpp  npc.cpp  npc.hpp  passage.cpp  passage.hpp  player.cpp  player.hpp  signpost.cpp  signpost.hpp  startpos.cpp  startpos.hpp  static_geometry.cpp  static_geometry.hpp  teleport.cpp  teleport.hpp
src/audio/: music.hpp  sound.hpp
src/core/: application.cpp  application.hpp  camera_functions.cpp  camera_functions.hpp  game_state.cpp  game_state.hpp  gettext.h  i18n.hpp  main.cpp  resolver.cpp  resolver.hpp  timer.cpp  timer.hpp  window.cpp  window.hpp
src/entities/: entity.hpp
src/exttexts/: exttexts.cpp  exttexts.hpp
src/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdlrenderer.cpp  imgui_impl_sdlrenderer.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
src/map_controllers/: map_controller.cpp  map_controller.hpp  oak_fortress.cpp  oak_fortress.hpp
src/os/: encoding.cpp  encoding.hpp  os.cpp  os.hpp  paths.cpp  paths.hpp
src/physics/: debug_drawer.cpp  debug_drawer.hpp  physics.cpp  physics.hpp  physics_converter.cpp  physics_converter.hpp
src/save/: save_system.cpp  save_system.hpp
src/scenes/: debug_map_scene.cpp  debug_map_scene.hpp  dummy_scene.cpp  dummy_scene.hpp  joymenu_scene.cpp  joymenu_scene.hpp  scene.cpp  scene.hpp  title_scene.cpp  title_scene.hpp
src/ui/: nuklear.c  nuklear.h  ui.cpp  ui.hpp
